--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -131,7 +131,7 @@
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-795a" data-image-width="1920" data-image-height="1200">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 10<br>
+        <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 10<br>
         </h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 Pro V2 21H2 by Adderly (14.08.2022)<br>
         </h6>
