--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -130,8 +130,8 @@
         </nav>
       </div></header>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-image u-section-1" id="sec-0039" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-valign-middle-xs u-sheet-1">
-        <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 8.0<br>
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+        <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 8.0<br>
         </h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 8.0 Pro V2 by Adderly (15.08.2022)<br>
         </h6>
