--- a/Содержимое-сборок.html
+++ b/Содержимое-сборок.html
@@ -129,13 +129,13 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-image u-section-1" id="sec-3b98" data-image-width="597" data-image-height="137">
+    <section class="u-align-center-sm u-align-center-xs u-clearfix u-image u-section-1" id="sec-3b98" data-image-width="597" data-image-height="137">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-round u-radius-33 u-image-1" src="images/2022-06-22180219.png" alt="" data-image-width="312" data-image-height="257">
-        <p class="u-align-center u-text u-text-default u-text-white u-text-1">Единственная папка на рабочем столе в моих сборках. "от Марка Аддерли"<br>В которой находится активатор, батники чтобы управлять обновлениями,<br>Обои только из разных версий Windows (Vista, 7, 8.0, 8.1, 10, 11)<br>ТОЛЬКО инсталяторы программ, типа Chrome, EasyBCD, и др.<br>Инсталяторы программ созданных мною, а так же курсоры и ярлычки.
+        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-default u-text-white u-text-1">Единственная папка на рабочем столе в моих сборках. "от Марка Аддерли"<br>В которой находится активатор, батники чтобы управлять обновлениями,<br>Обои только из разных версий Windows (Vista, 7, 8.0, 8.1, 10, 11)<br>ТОЛЬКО инсталяторы программ, типа Chrome, EasyBCD, и др.<br>Инсталяторы программ созданных мною, а так же курсоры и ярлычки.
         </p>
-        <img class="u-image u-image-round u-radius-31 u-image-2" src="images/2022-06-22180311.png" alt="" data-image-width="273" data-image-height="218">
-        <p class="u-align-center u-text u-text-default u-text-white u-text-2">Все программы находятся в папках по категории,<br>в каждой папке по максимум 5 инсталяторов.<br>В папках только самое нужное после установки.
+        <img class="u-image u-image-round u-radius-31 u-image-2" src="images/2022-08-17173742.png" alt="" data-image-width="270" data-image-height="255">
+        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-default u-text-white u-text-2">Все программы находятся в папках по категории,<br>в каждой папке по максимум 5 инсталяторов.<br>В папках только самое нужное после установки.
         </p>
         <p class="u-text u-text-default-lg u-text-default-xl u-text-white u-text-3">Подробное содержание</p>
         <img class="u-image u-image-round u-radius-50 u-image-3" src="images/2022-06-23003815.png" alt="" data-image-width="314" data-image-height="250">
@@ -147,14 +147,15 @@
         <img class="u-expanded-width-xs u-image u-image-default u-image-5" src="images/2022-06-23003857.png" alt="" data-image-width="263" data-image-height="535">
         <img class="u-expanded-width-xs u-image u-image-default u-image-6" src="images/2022-06-23003930.png" alt="" data-image-width="259" data-image-height="533">
         <p class="u-text u-text-default u-text-white u-text-8">Ну и инсталяторы программ:</p>
-        <img class="u-expanded-width-xs u-image u-image-default u-image-7" src="images/2022-06-23003944.png" alt="" data-image-width="259" data-image-height="223">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-7" src="images/2022-08-17173742.png" alt="" data-image-width="270" data-image-height="255">
         <img class="u-image u-image-default u-image-8" src="images/2022-06-23004010.png" alt="" data-image-width="302" data-image-height="80">
-        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-9" src="images/2022-06-23004034.png" alt="" data-image-width="567" data-image-height="60">
-        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-10" src="images/2022-06-23004049.png" alt="" data-image-width="535" data-image-height="56">
-        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-11" src="images/2022-06-23004106.png" alt="" data-image-width="577" data-image-height="51">
-        <img class="u-image u-image-default u-image-12" src="images/2022-06-23004126.png" alt="" data-image-width="203" data-image-height="105">
+        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-9" src="images/2022-08-17173942.png" alt="" data-image-width="200" data-image-height="132">
+        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-10" src="images/2022-08-17173856.png" alt="" data-image-width="230" data-image-height="134">
+        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-11" src="images/2022-08-17173822.png" alt="" data-image-width="209" data-image-height="108">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-12" src="images/2022-06-23004206.png" alt="" data-image-width="234" data-image-height="164">
         <img class="u-image u-image-default u-image-13" src="images/2022-06-23004144.png" alt="" data-image-width="150" data-image-height="122">
-        <img class="u-image u-image-default u-image-14" src="images/2022-06-23004206.png" alt="" data-image-width="234" data-image-height="164">
+        <img class="u-image u-image-default u-image-14" src="images/2022-06-23004126.png" alt="" data-image-width="203" data-image-height="105">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-15" src="images/2022-08-17174104.png" alt="" data-image-width="157" data-image-height="76">
       </div>
     </section>
     
