--- a/Старые-версии-Windows.html
+++ b/Старые-версии-Windows.html
@@ -154,9 +154,26 @@
         </h4>
       </div>
     </section>
-    <section class="u-clearfix u-hidden-lg u-hidden-xl u-section-2" id="sec-fa51">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр старых версий Windows не доступен на телефонах.</h1>
+    <section class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-grey-90 u-hidden-lg u-hidden-xl u-section-2" id="sec-fa51">
+      <div class="u-align-left-md u-align-left-sm u-align-left-xs u-clearfix u-sheet u-sheet-1">
+        <h2 class="u-text u-text-default u-text-1">Google Drive</h2>
+        <a href="https://drive.google.com/file/d/1_1mZyTvBIoVrkdUpMIpWw1oc1UKy_GjS/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-1">Windows 3.11</a>
+        <a href="https://drive.google.com/file/d/16suERWqPlyHnuYH0A8qQ58qERsgxYazq/view" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-2">Windows NT 4.0</a>
+        <a href="https://drive.google.com/file/d/1Z4LRNY4uXoR2clKlcz96TxaNE6Vc8S97/view" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-3">Windows 98 Second Edition</a>
+        <a href="https://drive.google.com/file/d/1OMcQXUBR7IPZjNmQtohhfDCV7qH3WGYb/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-4">Windows 2000 SP4</a>
+        <a href="https://drive.google.com/file/d/1atVVYvwdKNSR_clkTIWKGlKsiqdtqaa2/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-5">Windows Millenium Eition</a>
+        <a href="https://drive.google.com/file/d/1KExuUajTSoeLyXjRgqy3ag7SOCVRlDon/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-6">Windows XP SP3</a>
+        <a href="https://drive.google.com/file/d/1FSAStnqJS-7ocAOk0SFSejt1VoyYo-5j/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-7">Windows Vista</a>
+        <h2 class="u-text u-text-default u-text-2">MediaFire</h2>
+        <a href="https://www.mediafire.com/file/kfbq1o20wkxm27o/1Windows+3.11.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-8">Windows 3.11</a>
+        <a href="https://www.mediafire.com/file/56jrc0h5feaobwv/2Windows_95.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-9">Windows 95</a>
+        <a href="https://www.mediafire.com/file/exkqyyzwd4vgh45/3Windows_NT_4.0.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-10">Windows NT 4.0</a>
+        <a href="https://www.mediafire.com/file/uobtfjrc6vvu7i5/4Windows_98_SE.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-11">Windows 98 Second Edition</a>
+        <a href="https://www.mediafire.com/file/c177o9mz1ermz3p/5Windows_2000_SP4.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-12">Windows 2000 SP4</a>
+        <a href="https://www.mediafire.com/file/vrjmrbg05jw3ol9/6Windows_ME.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-13">Windows Millenium Eition</a>
+        <a href="https://www.mediafire.com/file/3m36synjtotmz3n/7Windows_XP_SP3.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-14">Windows XP SP3</a>
+        <a href="https://www.mediafire.com/file/4t8f9i2vpzr9zfk/Dos6.22.img/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-15">MS DOS 6</a>
+        <a href="https://www.mediafire.com/file/g1mydxpkno1whj5/Dos4.01.img/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-16">MS DOS 4</a>
       </div>
     </section>
     
