--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -81,6 +81,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
@@ -117,6 +118,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
@@ -173,7 +175,7 @@
       </div>
     </section>
     <section class="u-align-center-xs u-clearfix u-hidden-lg u-hidden-md u-hidden-sm u-hidden-xl u-image u-section-2" id="sec-709c" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-white u-text-1">
           <span style="font-weight: 400;">Сборки от Марка Аддерли<br>В которых нет мусора, телеметрии, и Яндексов.
           </span>
@@ -195,37 +197,11 @@
         <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-14">Старые Windows</a>
         <a href="Про-uTorrent-раздачи.html" data-page-id="145580229" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-15" target="_blank">По поводу uTorrent раздач</a>
         <a href="Проверка-на-целостность.html" data-page-id="281617986" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-27 u-radius-50 u-btn-16" target="_blank">Проверки на целостность</a>
-        <a href="https://donatello.to/adderly" class="u-align-center-md u-align-center-sm u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-17" target="_blank">Поддержать Автора сборок</a>
+        <a href="https://donatello.to/adderly" class="u-align-center-md u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-17" target="_blank">Поддержать Автора сборок</a>
         <a href="https://t.me/adderlywindows" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-18" target="_blank">Сборки от Аддерли Telegram</a>
         <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-19" target="_blank">Сборки от Аддерли YouTube</a>
-        <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-align-center-sm u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-20">Обзоры и отзывы о Сборках от Аддерли</a>
+        <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-20">Обзоры и отзывы о Сборках от Аддерли</a>
         <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-21" target="_blank">Как устанавливать сборки от Аддерли</a>
-        <h1 class="u-text u-text-white u-text-2">
-          <span style="font-weight: 400;">Сборки от Марка Аддерли<br>В которых нет мусора, телеметрии, и Яндексов.
-          </span>
-          <br>
-        </h1>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-radius-50 u-btn-22">Сборки Windows 7</a>
-        <a href="Windows-Mini-сборки.html" data-page-id="751803690" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-23 u-radius-50 u-btn-23">Сборки Windows Mini</a>
-        <a href="Информация-о-сборках.html" data-page-id="254799920" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-24">Информация о сборках</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-radius-50 u-btn-25">Сборки Windows 8.0</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-radius-50 u-btn-26">Сборки Windows 8.1</a>
-        <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-7 u-radius-50 u-btn-27">Советы по использованию</a>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-28">Сборки Windows 10</a>
-        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-29">Сборки Windows 11</a>
-        <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-30">Новости</a>
-        <a href="Windows-Lite-x32-Сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-31">Windows Lite x32 сборки</a>
-        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-32">Windows Lite сборки</a>
-        <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-33" target="_blank">Предложить идею / Оставить отзыв</a>
-        <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-34">Софт от Аддерли</a>
-        <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-35">Старые Windows</a>
-        <a href="Про-uTorrent-раздачи.html" data-page-id="145580229" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-36" target="_blank">По поводу uTorrent раздач</a>
-        <a href="Проверка-на-целостность.html" data-page-id="281617986" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-27 u-radius-50 u-btn-37" target="_blank">Проверки на целостность</a>
-        <a href="https://donatello.to/adderly" class="u-align-center-md u-align-center-sm u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-38" target="_blank">Поддержать Автора сборок</a>
-        <a href="https://t.me/adderlywindows" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-39" target="_blank">Сборки от Аддерли Telegram</a>
-        <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-40" target="_blank">Сборки от Аддерли YouTube</a>
-        <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-align-center-sm u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-41">Обзоры и отзывы о Сборках от Аддерли</a>
-        <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-42" target="_blank">Как устанавливать сборки от Аддерли</a>
       </div>
     </section>
     <section class="u-align-center-sm u-align-center-xs u-clearfix u-hidden-lg u-hidden-md u-hidden-xl u-hidden-xs u-image u-section-3" id="sec-09cf" data-image-width="1920" data-image-height="1200">
