--- a/Содержимое-сборок.html
+++ b/Содержимое-сборок.html
@@ -75,6 +75,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
@@ -111,6 +112,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
