--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -65,6 +65,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Новости.html" style="padding: 10px 20px;">Новости</a>
@@ -102,6 +103,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
@@ -131,18 +133,18 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-image u-section-1" id="sec-782f" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+    <section class="u-align-center u-clearfix u-image u-section-1" id="sec-782f" data-image-width="1920" data-image-height="1200">
+      <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 7</h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate V4 by Adderly (14.08.2022)<br>
         </h6>
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows7ByAdderly-2022-08-14-13-01-20.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows7ByAdderly-2022-08-14-13-01-371.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows7x64-2022-06-25-21-17-101.png" alt="" data-image-width="673" data-image-height="335">
-        <img class="u-image u-image-default u-image-4" src="images/2022-08-14130414.png" alt="" data-image-width="447" data-image-height="211">
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows7ByAdderly-2022-08-14-13-08-06.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows7ByAdderly-2022-08-14-13-08-29.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-align-center-xl u-text u-text-white u-text-3"> Обновления на 2011 год. (Service Pack 1) <br>
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows7ByAdderly-2022-08-14-13-01-20.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows7ByAdderly-2022-08-14-13-01-371.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows7x64-2022-06-25-21-17-101.png" alt="" data-image-width="673" data-image-height="335">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-4" src="images/2022-08-14130414.png" alt="" data-image-width="447" data-image-height="211">
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows7ByAdderly-2022-08-14-13-08-06.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows7ByAdderly-2022-08-14-13-08-29.png" alt="" data-image-width="1366" data-image-height="768">
+        <p class="u-text u-text-white u-text-3"> Обновления на 2011 год. (Service Pack 1) <br>
           <br>Добавлен активатор.<br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5<br>
@@ -154,14 +156,15 @@
           <br>Образ весит 4.36 GB, после установки Windows занимает 13 GB. <br>
           <br>Образ основан на официальном MSDN Windows 7.
         </p>
-        <a href="https://drive.google.com/file/d/10Csshuj0iVTErlJo2bcOIF0RyjysDbna/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V4 by Adderly [Google Drive]</a>
-        <a href="http://www.mediafire.com/file/42n7998yhianu6f/Windows_7_V4_by_Adderly.iso" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 7 Ultimate V4 by Adderly [MediaFire]</a>
+        <a href="https://drive.google.com/file/d/10Csshuj0iVTErlJo2bcOIF0RyjysDbna/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V4 by Adderly [Google Drive]</a>
+        <a href="http://www.mediafire.com/file/42n7998yhianu6f/Windows_7_V4_by_Adderly.iso" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 7 Ultimate V4 by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/19oBDa6A#knvbLpNDZzu9QD9Wtr4RgITakhG4EXuBj7JGv9Ggu8k" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-3" target="_blank"> Скачать Windows 7 Ultimate V4 by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-default u-text-white u-text-4">Windows 7 Ultimate V3.1 by Adderly (27.07.2022)<br>
         </h6>
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows7x64-2022-07-27-01-29-34.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-8" src="images/Windows7x64-2022-07-27-01-22-30.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-9" src="images/Windows7x64-2022-07-27-01-26-11.png" alt="" data-image-width="544" data-image-height="314">
-        <p class="u-align-center-xl u-text u-text-white u-text-5"> Обновления на 2011 год. (Service Pack 1) <br>
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows7x64-2022-07-27-01-29-34.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-8" src="images/Windows7x64-2022-07-27-01-22-30.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-9" src="images/Windows7x64-2022-07-27-01-26-11.png" alt="" data-image-width="544" data-image-height="314">
+        <p class="u-text u-text-white u-text-5"> Обновления на 2011 год. (Service Pack 1) <br>
           <br>Добавлен активатор.<br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ <br>
           <br>Интегрированы Framework 4.8<br>
@@ -171,13 +174,13 @@
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
           <br>Образ весит 4.33 GB, после установки Windows занимает 14.5 GB. <br>
           <br>Образ основан на официальном MSDN Windows 7.<br>
-          <br>В отличии от 3.0, нет никаких тем.
+          <br>В отличии от 4 версии, нет никаких тем.
         </p>
-        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-3" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-4" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [Google Drive]</a>
         <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.0</a>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 8.0</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-7">Сборки Windows 10</a>
       </div>
     </section>
     
