--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -65,6 +65,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Новости.html" style="padding: 10px 20px;">Новости</a>
@@ -102,6 +103,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
@@ -132,7 +134,7 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-795a" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 10<br>
         </h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 Pro V2 21H2 by Adderly (14.08.2022)<br>
@@ -153,10 +155,11 @@
           <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)<br>
         </p>
         <a href="https://drive.google.com/file/d/1jSfHGmjKvO82IhDkUoEbl-PSPQHujzhd/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [Google Drive]</a>
+        <a href="https://mega.nz/file/88BlRRhJ#H5dWFeCpkpilClUb7sUclM_tfnpC0jR1n9PRocZBPU0" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 Pro V2 1709 by Adderly (15.08.2022)</h6>
-        <img class="u-expanded-width-md u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows101709-2022-08-15-15-25-16.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows101709-2022-08-15-15-23-25.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-image u-image-default u-preserve-proportions u-image-7" src="images/2022-08-15152355.png" alt="" data-image-width="589" data-image-height="264">
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-5" src="images/Windows101709-2022-08-15-15-25-16.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-6" src="images/Windows101709-2022-08-15-15-23-25.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-7" src="images/2022-08-15152355.png" alt="" data-image-width="589" data-image-height="264">
         <p class="u-text u-text-default-xl u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления.&nbsp;<br>
           <br> Удалены приложения "​Камера, Почта, One Note, Windows Photos, Windows Sound Recorder, Get Started, People , Xbox, Windows Store" <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
@@ -166,9 +169,9 @@
           <br>Образ весит 5.32 GB, после установки Windows занимает 11 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
         </p>
-        <a href="https://drive.google.com/file/d/1ee90-yibkYTH7jZH6C2QdXX635H9H1nW/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1ee90-yibkYTH7jZH6C2QdXX635H9H1nW/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [Google Drive]</a>
         <h6 class="u-text u-text-default u-text-white u-text-6">Windows 10 Pro 1607 by Adderly (22.06.2022)</h6>
-        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-8" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-9" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-10" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
         <p class="u-text u-text-white u-text-7"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
@@ -182,11 +185,11 @@
           <br>Образ весит 4.66 GB, после установки Windows занимает 10.7 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1607 (Anniversary Update)
         </p>
-        <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro 1607 by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-4" target="_blank">Скачать Windows 10 Pro 1607 by Adderly [Google Drive]</a>
         <p class="u-text u-text-default u-text-white u-text-8">Смотрите так же:</p>
-        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 11</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 7</a>
+        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 11</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-7">Сборки Windows 7</a>
       </div>
     </section>
     
