--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -65,6 +65,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Новости.html" style="padding: 10px 20px;">Новости</a>
@@ -102,6 +103,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
@@ -132,7 +134,7 @@
         </nav>
       </div></header>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-image u-section-1" id="sec-2e85" data-image-width="3840" data-image-height="2400">
-      <div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 11<br>
         </h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 11 Pro V3 21H2 by Adderly (15.08.2022)<br>
@@ -153,11 +155,12 @@
         <a href="https://drive.google.com/file/d/1nXIKyTFP3iapDrB4KXNSchoWY42jVL3S/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 Pro V3 21H2 by Adderly [Google Drive]</a>
         <a href="https://www.mediafire.com/file/jtw0kmrt8dgi44q/Windows+11+V3+21H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-palette-2-base u-radius-50 u-btn-2" target="_blank"> Скачать Windows 11 Pro V3 21H2 by Adderly [MediaFire]</a>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/Windows%2011%20V3%2021H2%20by%20Adderly.torrent" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-palette-2-base u-radius-50 u-btn-3" target="_blank"> Скачать Windows 11 Pro V3 21H2 by Adderly [Torrent]</a>
-        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-4">Как обойти проверку Windows 11</a>
+        <a href="https://mega.nz/file/M5YzXDrL#0UqRQNv_qTs4fREYjUtjN3QllGsIT45nTdJKRlEEHoU" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-palette-2-base u-radius-50 u-btn-4" target="_blank"> Скачать Windows 11 Pro V3 21H2 by Adderly [MEGA.NZ]</a>
+        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-5">Как обойти проверку Windows 11</a>
         <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 10</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-7">Сборки Windows 7</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-7">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-8">Сборки Windows 7</a>
       </div>
     </section>
     
